maze.pledge.PledgeMaze.scala.error
Compilation error:
PledgeMaze:55: error: not found: value LeftFollowerMode
      case _ => sommeAngle = LeftFollowerMode(sommeAngle);
                             ^